--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -1,7 +1,7 @@
 name: 🐞 Bug
 description: Report a bug
 title: "🐞 [BUG] <title>"
-labels: [Bug]
+labels: [bug]
 body:
 - type: markdown
   attributes:
